kali-team/kali-project-ambulance-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kali-ambulance-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: kali-ambulance-webapi-label
  template:
    metadata:
      labels:
        pod: kali-ambulance-webapi-label
    spec:
      containers:
        - name: kali-ambulance-webapi-container
          image: pavol6999/backend:1.0.0-43
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
