kali-team/kali-project-ambulance-be/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kali-ambulance-webapi
spec:
  type: ClusterIP
  selector:
    pod: kali-ambulance-webapi-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
