kali-team/kali-project-ambulance-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kali-ambulance-webapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: wac-hospital
  rules:
    - http:
        paths:
          - path: /kali-waiting-list-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kali-ambulance-webapi
                port:
                  name: webapi-s-port
